--- a/project/src/styles/App.css
+++ b/project/src/styles/App.css
@@ -8,7 +8,7 @@ header h1 {
 }
 .container {
     max-width: 800px;
-    margin: 80px auto;
+    margin: 80px 10px;
 }
 
 .game-board {
@@ -23,12 +23,12 @@ header h1 {
     font-size: 24px;
     font-weight: bold;
     line-height: 34px;
-    height: 34px;
+    height: 40px;
+    width: 40px;
     margin-right: -1px;
     margin-top: -1px;
     padding: 0;
     text-align: center;
-    width: 34px;
 }
 
 .square:focus {
